tests/lean/123-2.lean.expected.out
123-2.lean:54:15: error: type mismatch at field 'commutes''
  ?m_1
has type
  ∀ (r : R), (λ (b : B), ?m_1[b]) (⇑(algebra_map' R B) r) = ⇑(algebra_map' R C) r
but is expected to have type
  ∀ (r : R),
    {to_fun := λ (b : B), ?m_1[b], map_one' := ?m_2, map_mul' := ?m_3, map_zero' := ?m_4, map_add' := ?m_5}.to_fun
        (⇑(algebra_map' R B) r) =
      ⇑(algebra_map' R C) r
